--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -2,5 +2,7 @@ extends base.pug
 
 block content 
     form(method="POST")
-        input(name="title", placeholder="Title", required, type="text")
+        input(placeholder="Title", name="title", required, type="text")
+        input(placeholder="Description", name="description", required, type="text")
+        input(placeholder="Hashtags, separated by comma.", name="hashtags", required, type="text")
         input(type="submit", value="Upload Video")
