--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,9 @@
 extends base.pug
 
 block content 
-    h4 Change Title of Video
+    h4 Update Video
     form(method="POST")
-        input(name="title", placeholder="Video Title", value=video.title)
+        input(placeholder="Video Title", name="title", required, type="text",value=video.title, maxlength=80)
+        input(placeholder="Description", name="description", required, type="text", value=video.description, minlength=20)
+        input(placeholder="Hashtags, separated by comma.", name="hashtags", required, value=video.hashtags.join(), type="text")
         input(value="save", type="submit")
