--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -12,9 +12,13 @@ html(lang="ko")
                         a(href="/") Home
                     if loggedIn
                         li
+                            a(href="/videos/upload") Upload Video
+                        li
+                            a(href=`/users/${loggedInUser._id}`) My Profile
+                        li
+                            a(href="/users/edit") Edit Profile
+                        li
                             a(href="/users/logout") Log Out
-                        li 
-                            a(href="/my-profile") #{loggedInUser.name}의 Profile
                     else
                         li
                             a(href="/join") Join
@@ -23,8 +27,7 @@ html(lang="ko")
                     
                     li
                         a(href="/search") Search
-                    li
-                        a(href="/videos/upload") Upload Video
+                    
                     
         main
             block content
