--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -3,7 +3,9 @@ extends base.pug
 block content
     if errorMessage
         sapn=errorMessage
-    form(method="POST")
+    form(method="POST" enctype="multipart/form-data")
+        lable(for="video") Video File
+        input(type="file", accept="video/*", required, id="video", name="video")
         input(placeholder="Video Title", name="title", required, type="text", maxlength=80)
         input(placeholder="Description", name="description", required, type="text", minlength=20)
         input(placeholder="Hashtags, separated by comma.", name="hashtags", required, type="text")
