--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -3,6 +3,7 @@ html(lang="ko")
     head
         title #{pageTitle} | Wetube
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
+        link(rel="stylesheet" href="/static/css/styles.css")
     body
         header
             h1=pageTitle
@@ -27,8 +28,7 @@ html(lang="ko")
                     
                     li
                         a(href="/search") Search
-                    
-                    
         main
             block content
     include partials/footer
+    script(src="/static/js/main.js")
