--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,8 +1,8 @@
 extends ../base
 include ../mixins/video
 
-block content
-    each video in videos
-        +video(video)
+block content 
+    each potato in user.videos
+        +video(potato)
     else
-        li Sorry nothing found
+        li Sorry nothing found.
