--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,6 +1,8 @@
 extends base.pug
 
 block content
+    div
+        //button#startBtn Start Recording
     if errorMessage
         sapn=errorMessage
     form(method="POST" enctype="multipart/form-data")
@@ -10,3 +12,5 @@ block content
         input(placeholder="Description", name="description", required, type="text", minlength=20)
         input(placeholder="Hashtags, separated by comma.", name="hashtags", required, type="text")
         input(type="submit", value="Upload Video")
+block scripts
+    script(src="/static/js/recorder.js")
