--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,31 +1,37 @@
 extends base.pug
 
 block content
-    div#videoContainer
+    div#videoContainer(data-id=video._id)
         video(src="/"+video.fileUrl)
-        div#videoControls
-            button#play Play
-            button#mute Mute
-            input(type="range",step="0.2", value=0.5, min="0", max="1")#volumn
+        div#videoControls.videoControls
+            div.videoControls__play
+                span#play.videoControls__playBtn
+                    i.fas.fa-play
+                div.videoControls__time
+                    span#currenTime 00:00
+                    span  / 
+                    span#totalTime 00:00
+            input(type="range",step="1", value="0", min="0")#timeline.videoControls__timeline
+            div.videoControls__volume
+                input(type="range",step="0.1", value=0.5, min="0", max="1")#volume
+                span#mute
+                    i.fas.fa-volume-up
             div
-                span#currenTime 00:00
-                span  / 
-                span#totalTime 00:00
-            div
-                input(type="range",step="1", value="0", min="0")#timeline
-            div
-                button#fullScreen Enter Full Screen
-        
-    //-
-        div
-            p=video.description
-            small=video.createdAt
-        div
-            small Uploaded by 
-                a(href=`/users/${video.owner._id}`)=video.owner.name
-        if String(video.owner._id) === String(loggedInUser._id)
-            a(href=`${video.id}/edit`) Edit Video &rarr;
-            br
-            a(href=`${video.id}/delete`) Delete Video &rarr;
+                span#fullScreen
+                    i.fas.fa-expand
+    if loggedIn
+        div.video__add-comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write a nice comment...")
+                button Add Comment
+    div.video__comments
+        ul
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment 
+                    span  #{comment.text}
+                    span X
 block scripts
     script(src="/static/js/videoPlayer.js")
+    if loggedIn
+        script(src="/static/js/commentSection.js")
